--- a/BridgeLabzServlets/WebContent/WEB-INF/web.xml
+++ b/BridgeLabzServlets/WebContent/WEB-INF/web.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <display-name>BridgeLabzServlets</display-name>
+  <display-name>BridgeLabz</display-name>
   <welcome-file-list>
-    <welcome-file>login.jsp</welcome-file>
-    <welcome-file>register.jsp</welcome-file>
-    <welcome-file>Welcome.jsp</welcome-file>
+   <welcome-file>login.html</welcome-file>
+   <welcome-file>login.htm</welcome-file>
+   <welcome-file>login.jsp</welcome-file>
+   <welcome-file>default.html</welcome-file>
+   <welcome-file>default.htm</welcome-file>
+   <welcome-file>default.jsp</welcome-file>
       </welcome-file-list>
+      <servlet>
+      <servlet-name>LoginRegisterController</servlet-name>
+      <servlet-class>com.bridgelabz.loginreg.controller.LoginRegisterController</servlet-class>
+      </servlet>
+      <servlet-mapping>
+      <servlet-name>LoginRegisterController</servlet-name>
+      <url-pattern>/LoginRegisterController</url-pattern>
+      </servlet-mapping>
+      
 </web-app>
